# common

./: .gitignore  CMakeLists.txt
src/: common.cpp
